5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1680_1949.log
== TEST (2019-05-03 16:49:01) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	p = 100.000,",",00
	print(p)
-- OUTPUT:
(100.0, ',', 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 16:49:21) 
-- CODE:
p = 100.000,",",00
	print(p)
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	p = 100.000,",",00
	print(p)
-- ERROR:
File "XXXX", line 2
    print(p)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 16:49:28) 
-- CODE:
p = 100.000,",",00
print(p)
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	p = 100.000,",",00
	print(p)
-- OUTPUT:
(100.0, ',', 0)
(100.0, ',', 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 17:02:56) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	p = 100.000
elif ((na//10)%10 == (ns//10)%10 or (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 or (na//1)%10 == (ns//10)%10):
	p = 1.000
elif ((na//10)%10 == (ns//10)%10 and (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 and (na//1)%10 == (ns//10)%10):
	p = 50.000
	print("Ganhou R$", p)
else:
	print("Perdeu")
-- OUTPUT:
(100.0, ',', 0)
(100.0, ',', 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 17:03:39) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	p = 100.000
elif ((na//10)%10 == (ns//10)%10 or (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 or (na//1)%10 == (ns//10)%10):
	p = 1.000
elif ((na//10)%10 == (ns//10)%10 and (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 and (na//1)%10 == (ns//10)%10):
	p = 50.000
	
	print("Ganhou R$", p)
else:
	print("Perdeu")
-- OUTPUT:
(100.0, ',', 0)
(100.0, ',', 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 17:05:26) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	print("Ganhou R$ 100.000,00")
elif ((na//10)%10 == (ns//10)%10 or (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 or (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 1.000,00")
elif ((na//10)%10 == (ns//10)%10 and (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 and (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 50.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-03 17:06:22) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	print("Ganhou R$ 100.000,00")
elif ((na//10)%10 == (ns//10)%10 and (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 and (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 50.000,00")
elif ((na//10)%10 == (ns//10)%10 or (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 or (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 17:06:32) 
-- CODE:
na = int(input("Numero apostado: "))
ns = int(input("Numero sorteado: "))

if (na == ns):
	print("Ganhou R$ 100.000,00")
elif ((na//10)%10 == (ns//10)%10 and (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 and (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 50.000,00")
elif ((na//10)%10 == (ns//10)%10 or (na//1)%10 == (ns//1)%10 or (na//10)%10 == (ns//1)%10 or (na//1)%10 == (ns//10)%10):
	print("Ganhou R$ 1.000,00")
else:
	print("Perdeu")
-- EXECUTION TIME:
0.282599
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
